Bug 170878 - can't reach the menu without mouse
Summary: can't reach the menu without mouse
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 235798 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-09-11 21:17 UTC by Andreas Pakulat
Modified: 2011-03-18 16:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Pakulat 2008-09-11 21:17:40 UTC
Its currently impossible for me to reach the menu without using the mouse, pretty bad for a terminal app IMHO. The menu doesn't have any accelerators set and a simple <Alt> doesn't seem to work (but doesn't seem to work in any KDE4 app for that matter).
Comment 1 Robert Knight 2008-09-11 21:44:46 UTC
Regarding the behavior of 'Alt' - I get bug reports however I implement that (Alt+Letter, Alt on its own, no Alt) so I think a better approach is to reserve a menu access key (gnome-terminal uses Alt+F10 I think) and mention it in the UI.

Comment 2 Andreas Pakulat 2008-09-11 21:56:59 UTC
Hehe. Yeah I guess a shortcut for that would be best, thats how TUI apps often do it as well - for example aptitude uses Ctrl+T
Comment 3 Kurt Hindenburg 2011-03-04 21:25:58 UTC
*** Bug 235798 has been marked as a duplicate of this bug. ***
Comment 4 Kurt Hindenburg 2011-03-18 14:58:26 UTC
Git commit 6e12d788642816fd892dc7bbe5ed99d0a95a704b by Kurt Hindenburg.
Committed on 18/03/2011 at 14:34.
Pushed by hindenburg into branch 'master'.

Create a shortcut to activate the menu bar.

This allows access to the menu bar via the keyboard.

BUG: 170878
FIXED-IN: 4.7
REVIEW: 100804

M  +32   -0    src/MainWindow.cpp     
M  +1    -0    src/MainWindow.h     

http://commits.kde.org/konsole/6e12d788642816fd892dc7bbe5ed99d0a95a704b
Comment 5 Kurt Hindenburg 2011-03-18 16:01:53 UTC
Git commit 5cf21b4e2e0dea00628fa5c900081cbee93007a1 by Kurt Hindenburg.
Committed on 18/03/2011 at 15:59.
Pushed by hindenburg into branch 'master'.

Don't search for 'File' but grab the menu's first qaction.

As pinotree on IRC kindly pointed out, searching for 'File' won't work
in non-English menus.  Now we grab the first action in the menu which
should always be in for the File menu in Konsole.

CCBUG: 170878

M  +12   -19   src/MainWindow.cpp     

http://commits.kde.org/konsole/5cf21b4e2e0dea00628fa5c900081cbee93007a1