Create a shortcut to activate the menu bar.

This allows access to the menu bar via the keyboard.

BUG: 170878
FIXED-IN: 4.7
REVIEW: 100804